<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
     android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.4"
        android:orientation="horizontal"
        android:padding="30dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/big_logo2x" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:visibility="gone"
            android:background="#E0E0E0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                app:srcCompat="@drawable/user2x" />

            <EditText
                android:id="@+id/editText_userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.8"
                android:ems="10"
                android:hint="@string/signin_up_username"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                app:srcCompat="@drawable/password2x" />

            <EditText
                android:id="@+id/editText_Passwrd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:layout_weight="0.8"
                android:ems="10"
                android:hint="@string/signin_up_pass"
                android:inputType="textPassword"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/button_singIn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.20"
                android:background="@drawable/button_bg_blue"
                android:text="@string/signin_up_signin_button"
                android:textAllCaps="false"
                android:textColor="#7AC3D1" />

            <TextView
                android:id="@+id/textView_forgetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/signin_up_signin_forger_pass"
                android:textColor="#7AC3D1"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/signin_up_do_you_have_account"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/signin_up_signup"
                android:textColor="@android:color/holo_blue_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_continueAsGuest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_up_continue_as_guist"
                android:textColor="@android:color/holo_blue_light" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>